member registration partially completed
